<resources>
    <string name="app_name">행사 일정 플래너</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_edit">Settings</string>

    <string name="plan">일정</string>
    <string name="goal">내용</string>
    <string name="new_plan">새 일정</string>
    <string name="plan_detail">일정 정보</string>
    <string name="plan_progress">일정(진행중)</string>
    <string name="plan_time_progress">시간</string>
    <string name="plan_breakdown">세부 일정</string>
    <string name="plan_breakdown_over">.</string>

    <string name="plan_content_description"> &#160;행사 계획을 수립합니다</string>
    <string name="plan_goal_description"> &#160;행사 내용</string>
    <string name="plan_memo_description"> &#160;부가설명</string>
    <string name="plan_breakdown_des">행사 세부 계획을 수립합니다</string>
    <string name="plan_date_range">시간</string>
    <string name="plan_status_priority">상태&amp;우선도</string>
    <string name="plan_weight">중요도</string>
    <string name="subplan_add">세부 계획 추가</string>


    <string name="plan_memo">메모</string>
    <string name="new_plan_tip1">tip1</string>
    <string name="new_plan_tip2">tip2</string>
    <string name="new_plan_tip3">tip3</string>
    <string name="plan_starttime_text">시작시간</string>
    <string name="plan_endtime_text">종료시간</string>
    <string name="status">상태</string>
    <string name="delete_warn">일정을 삭제하시면 모든 세부 일정도 삭제됩니다</string>

    <string-array name="planStatus_items">
        <item id="0">시작 전</item>
        <item id="1">진행중</item>
        <item id="2">중지</item>
    </string-array>

    <string name="plan_progress_display">&#160;&#160;&#160;&#160;&#160;&#160;세부일정 진행도&#160;&#160;</string>
    <string name="plan_progress_display1">세부 일정이 전체 행사에서 차지하는 비율&#160;&#160;</string>
    <string name="plan_total_progress">총 진행도</string>
    <string name="plan_now">지금부터</string>
    <string name="plan_future">나중부터</string>

    <string name="project_progress_iconfont">▷</string>
    <string name="date_arrow_iconfont">▶</string>
    <string name="arrow_up">↑</string>
    <string name="arrow_down">↓</string>
    <string name="ic_right_arrow">→</string>

    <string name="add_icon">+</string>

</resources>
