<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/project_item_layout"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/size_8dp"
    android:layout_marginRight="@dimen/size_8dp"
    android:layout_marginTop="8dp"
    card_view:cardCornerRadius="4dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/project_title_layout"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/project_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="행사 플래너"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="normal"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/project_status_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_progress_iconfont"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:visibility="visible"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <TextView
            android:id="@+id/project_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="행사 일정을 추가하세요"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:gravity="center_vertical|left"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"/>

        <RelativeLayout
            android:id="@+id/sub_plan_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:elevation="2dp">

            <TextView
                android:id="@+id/sub_plan_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_right_arrow"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:textSize="14sp"
                 />
            <TextView
                android:id="@+id/sub_plan_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/sub_plan_num"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8dp"
            android:layout_marginBottom="@dimen/size_16dp"
            android:layout_marginLeft="@dimen/size_16dp"
            android:layout_marginRight="@dimen/size_16dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_12sp"
                        android:text="@string/plan_progress"/>
                    <TextView
                        android:id="@+id/plan_item_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_12sp"
                        android:text="0%"/>
                </RelativeLayout>
                <ProgressBar
                    android:id="@+id/plan_progressbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progressTint="@color/white"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progress="0"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_12sp"
                        android:text="@string/plan_time_progress"/>
                    <TextView
                        android:id="@+id/plan_time_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_12sp"
                        android:text="30%"/>
                </RelativeLayout>
                <ProgressBar
                    android:id="@+id/plan_time_progressbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progressTint="@color/white"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progress="30" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="bottom|right"
                android:gravity="bottom|right"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="1.5dp"
                    android:layout_gravity="bottom|right">
                    <TextView
                        android:id="@+id/project_startdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/project_arrowdate_icon"
                        android:text="2015/10/20"
                        android:visibility="gone"
                        android:layout_marginRight="6dp"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/project_arrowdate_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/project_enddate"
                        android:text="@string/date_arrow_iconfont"
                        android:textSize="14sp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/project_enddate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="2015/10/20"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>
