<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondfont"
            android:layout_marginLeft="@dimen/size_16dp"
            android:layout_centerVertical="true"
            android:textSize="@dimen/size_16sp"
            android:text="@string/subplan_add"/>
        <LinearLayout
            android:id="@+id/add_sub_plan_done"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_done_24dp"
            android:layout_margin="@dimen/size_16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/delete_sub_plan"
            android:layout_toLeftOf="@id/add_sub_plan_done"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_delete_24dp"
                android:layout_margin="@dimen/size_16dp" />
        </LinearLayout>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue_green"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/subplan_content_layout"
        android:baselineAligned="false"
        android:layout_marginLeft="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_16dp"
        android:layout_marginRight="@dimen/size_16dp"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/subplan_content"
            android:hint="@string/plan"
            android:imeOptions=""
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/title_bottom"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/add_subplan_timeshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_16dp"
        android:layout_marginRight="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/subplan_datetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondfont"
            android:text="@string/plan_date_range"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_date_range"
                android:layout_marginRight="4dp"/>
            <!--start time-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/subplan_starttime"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_18dp"
                    android:gravity="center"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"/>

            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_right_arrow"
                android:layout_marginRight="@dimen/size_8dp"
                android:layout_marginLeft="@dimen/size_8dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/subplan_endtime"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_18dp"
                    android:gravity="center"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"/>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/show_time_weightlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginLeft="@dimen/size_16dp"
        android:layout_marginRight="@dimen/size_16dp"
        android:layout_marginBottom="@dimen/size_32dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_progress_display1"
                android:textColor="@color/fontblack"/>
            <TextView
                android:id="@+id/subplan_detail_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="%"/>
        </LinearLayout>

        <android.support.v7.widget.AppCompatSeekBar
            android:id="@+id/subplan_progress_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>